syntax = "proto3";
package nebulix.storage.v1;

option go_package = "nebulix/x/storage/types";

// Provider defines the Provider message.
message Provider {
  string address = 1;
  string hostname = 2;
  int64 space_available = 3;
  int64 space_used = 4;
  int64 created_at = 5;
  int64 credit_delta = 6;
}
